2009-08-12  Michael Hutchinson  <mhutchinson@novell.com>

	* InterfaceBuilder/IBObject.cs: Change deserialization order
	  so the stack doesn't get so deep.

2009-08-12  Michael Hutchinson  <mhutchinson@novell.com>

	* CodeBehindGenerator.cs:
	* InterfaceBuilder/IBDocument.cs:
	* InterfaceBuilder/IBConnectionRecord.cs: Generalised
	  connection record handling so we don't choke on desktop
	  xibs.

2009-08-12  Michael Hutchinson  <mhutchinson@novell.com>

	* CodeBehindGenerator.cs:
	* InterfaceBuilder/IBReference.cs:
	* InterfaceBuilder/IBConnectionRecord.cs: Lazily resolve the
	  ClassDescriptionSource on a class description instead of
	  assuming it's resolved.

2009-08-12  Michael Hutchinson  <mhutchinson@novell.com>

	* InterfaceBuilder/IBObject.cs: Better parsing of
	  "base64-UTF8" strings. Add support for any primitive to have
	  an id.

2009-08-07  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneFrameworkBackend.cs: Fix fx package name.

2009-08-06  Michael Hutchinson  <mhutchinson@novell.com>

	* CodeBehindGenerator.cs: Use TrimEnd instead of Substring for
	  action names, in the C# code generation path. Also switch
	  from Trim to TrimEnd in the CodeDOM path.

2009-08-06  Michael Hutchinson  <mhutchinson@novell.com>

	* CodeBehindGenerator.cs: Map MK interface type prefix to
	  MapKit namespace.

2009-08-06  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneProject.cs: Better handling of output paths when
	  creating configurations.

2009-08-06  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneProjectConfiguration.cs: Override and implement
	  CopyFrom. Should allow the config editing panel to store
	  values.

2009-08-06  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Quote filenames passed to ibtool.

2009-08-05  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/IPhoneOptionsPanel.cs: Fix the assignment of values
	  between GUI and project properties.
