@@ -30,6 +30,12 @@ namespace ${Namespace}
 	public partial class ${Name} : UIViewController
 	{
 		
+		// This is required for controllers that need to be able to be
+		// created from a xib rather than from managed code
+		public ${Name} (IntPtr handle) : base (handle)
+		{
+		}
+		
 	}
 }
 ]]></File>
