@@ -1,3 +1,7 @@
+2009-08-13  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* Templates/IPhoneViewController.xft.xml: Add an intptr ctor.
+
 2009-08-12  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* InterfaceBuilder/IBObject.cs: Change deserialization order
